# immo-bot

./: .gitignore  example_announce_data.json  pyproject.toml
src/: algo.py  main.py
